--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Redirecting to mcpherrin.ca</title>
     <meta http-equiv="Refresh" content="0; url=https://mcpherrin.ca" />
   </head>
   <body>
